--- a/test/test_loss.ipynb
+++ b/test/test_loss.ipynb
@@ -2,9 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "ExecuteTime": {
+     "end_time": "2023-06-06T08:07:35.854615600Z",
+     "start_time": "2023-06-06T08:07:32.240933200Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -176,6 +180,57 @@
    ],
    "metadata": {
     "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "(tensor([[-1.6336, -1.6944, -1.0283, -3.1764, -1.5064],\n         [-1.6933, -0.8209, -2.0381, -3.3705, -1.5540],\n         [-2.8446, -0.5310, -2.8125, -3.5543, -1.3274]]),\n tensor([0, 2, 3]))"
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "logits = torch.randn(3,5).log_softmax(dim=-1)\n",
+    "targets = torch.tensor([0,2,3])\n",
+    "\n",
+    "logits,targets\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-06-06T08:17:32.806738300Z",
+     "start_time": "2023-06-06T08:17:32.777036500Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "tensor(2.5357)"
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "F.cross_entropy(logits,targets,ignore_index=2,label_smoothing=0.1)\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-06-06T08:17:53.190758600Z",
+     "start_time": "2023-06-06T08:17:53.167729600Z"
+    }
    }
   },
   {
